# soliseum-program

./: .dockerignore  .gitattributes  .gitignore  Anchor.toml  BATTLE_STAKES_UI_UPDATE.md  Cargo.toml  DEPLOY.md  Dockerfile  MATCHMAKING_FIXES_SUMMARY.md  ORACLE_MULTISIG_MIGRATION.md  README.md  REPOS.md  TROUBLESHOOTING.md  VERCEL.md  check-battles.ps1  debug-db.ps1  fix-and-restart.ps1  fix-everything.ps1  fix-supabase-connection.ps1  nixpacks.toml  package-lock.json  package.json  reset-battles.ps1  reset-database.sql  restart-backend.ps1  restart-frontend.ps1  setup-local-postgres.ps1  test-db-connection.ps1  tsconfig.json  vercel.json
programs/soliseum/: Cargo.toml
programs/soliseum/src/: lib.rs
scripts/: build-from-wsl.sh  build-sbf-debug.ps1  build-windows.ps1  ensure-build-dirs.ps1  fix-build-error.ps1  generate-oracle-key.ts  install-anchor-windows.md  setup-keypair.sh
soliseum-agent/: index.js  package-lock.json  package.json  register.js  test-battle.js
soliseum-arena/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
soliseum-arena/src/: App.tsx  index.css
soliseum-backend/: .env.example  README.md  SETUP.md  debug-matchmaking.ps1  drizzle.config.ts  package-lock.json  package.json
soliseum-backend/drizzle/: 0000_soliseum_schema.sql  0001_add_stakes_indexes.sql  0002_add_performance_indexes.sql  0003_add_agent_registration.sql
soliseum-backend/scripts/: create-arena.ts  create-test-battle.ts  delete-live-arenas.ts  delete-settled-arenas.ts  fix-stuck-battle.ts  fund-oracle.ts  (+6 more)
tests/: soliseum.ts
(+72 files in other folders)
