[package]
name = "soliseum"
version = "0.1.0"
description = "Soliseum - AI Agent battle arena on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soliseum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
